# fsharp-tools.nvim

./: .gitignore  LICENSE  README.md  build.sh  justfile
.github/workflows/: release.yml  rust-cache.yml  test.yml
ast-tool/: Program.fs  ast-tool.fsproj
lib/: Cargo.toml
lib/src/: error.rs  file.rs  lib.rs
lib/src/tests/: mod.rs
lib/src/tests/files/projects/: diff_expected.fsproj  diff_original.fsproj  diff_to_write.fsproj  set_files_original.fsproj  with_version.fsproj  without_version.fsproj
lua/: fs-tools.lua
lua/fs-tools/: init.lua
lua/fsharp-tools/: init.lua  utils.lua
