[package]
name = "fsharp-tools-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
mlua = { version = "0.9.5", features = ["luajit", "module"] }
quick-xml = "0.31.0"
xmltree = "0.10.3"
