[package]
name = "fsharp-tools-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
cfg-if = "1.0.0"
fs2 = "0.4.3"
mlua = { version = "0.9.5", features = ["luajit", "module"] }
xmltree = "0.11.0"

[dev-dependencies]
diff = "0.1.13"
